Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <a name="%E3%83%9A%E3%83%B3%E3%82%AE%E3%83%B3%E3%82%92%E5%AE%88%E3%82%8B%E4%BC%9A" class="anchor" href="#%E3%83%9A%E3%83%B3%E3%82%AE%E3%83%B3%E3%82%92%E5%AE%88%E3%82%8B%E4%BC%9A"><span class="octicon octicon-link"></span></a>ペンギンを守る会</h1>
 
 <ul>
-<li><a href="web-export/index.html">最終課題</a></li>
+<li><p>東京藝術大学の消費電力により、温暖化が進み、南極の氷が溶け、ペンギンの住処がなくなってしまいます。そんな危機的な状況をビジュアラ* イズしました。電力が使われるごとに白いグラフが下がる様になっていきます。</p></li>
+<li><p><a href="web-export/index.html">最終課題</a></p></li>
 </ul>
       </section>
     </div>
